syntax = "proto3";

package org.hse.torrent.services.api;

import "google/protobuf/empty.proto";

service CliService {
  /* Показать все файлы, которые есть на сервере */
  rpc listSharedFiles (google.protobuf.Empty) returns (stream ListFileResponse);
  /*  Сказать клиенту что мы хотим раздавать файл */
  rpc uploadFile (UploadFileRequest) returns (UploadFileResponse);
  /* Загрузить себе какой-то файл */
  rpc downloadFile (DownloadFileRequest) returns (google.protobuf.Empty);
}

/* LIST */
message ListFileResponse {
  int32  fileId = 1;
  string name = 2;
  int64  sizeBytes = 4;
}

/* UPLOAD */
message UploadFileRequest {
  string localPath = 1;
}

message UploadFileResponse {
  int32 fileId = 1;
}

/* UPLOAD */
message DownloadFileRequest {
  int32  fileId = 1;
  string localPath = 2;
}

